--- a/Airline-Management/src/app/app.component.html
+++ b/Airline-Management/src/app/app.component.html
@@ -1,14 +1,6 @@
-<h1>Insurance Policies</h1>
-<table style="width:100%">
-  <tr>
-    <th>ID</th>
-  </tr>
-  <tr *ngFor="let airline of airlines">
-    <td>{{ airline.id }}</td>
+<a routerLink="/create">Create Flight</a> &nbsp;&nbsp;
+<a routerLink="/modify">Modify Flight</a> &nbsp;&nbsp;
+<a routerLink="/delete">Delete Flight</a> &nbsp;&nbsp;
+<a routerLink="/view">View Flight</a>
 
-    <td>
-      <button (click)="deleteAirline(airline.id)">Delete</button>
-      <button (click)="updateAirline(airline)">Update</button>
-    </td>
-  </tr>
-</table>
+<router-outlet></router-outlet>
