--- a/Airline-Management/src/app/app.component.html
+++ b/Airline-Management/src/app/app.component.html
@@ -1,6 +1,7 @@
+<h1 style="font-weight: bolder;">Airline Management</h1>
+&nbsp;&nbsp;
 <a routerLink="/create">Create Flight</a> &nbsp;&nbsp;
 <a routerLink="/modify">Modify Flight</a> &nbsp;&nbsp;
 <a routerLink="/delete">Delete Flight</a> &nbsp;&nbsp;
 <a routerLink="/view">View Flight</a>
-
 <router-outlet></router-outlet>
